# Claude-Night-Pilot

./: .aicommitsrc  .eslintrc.js  .gitignore  .gitmessage.template  .taurignore  .versionrc.js  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  FRONTEND_FIXES_TODO.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  LICENSE  MODULAR_REFACTORING_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_ANALYSIS_SUMMARY.md  README.md  REFACTORING_ROADMAP.md  RESEARCH_ANALYSIS_REPORT.md  SECURITY.md  TESTING_REPORT.md  TEST_REPORT.md  claude-night-pilot.db  commitlint.config.js  eslint.config.js  execute-analysis-suite.sh  execute-project-analysis.js  gui_integration_test.js  install.sh  package-lock.json  package.json  playwright-cli.config.js  playwright-gui.config.js  playwright.config.js  quick_perf_test.py  run-immediate-analysis.js  run-project-analysis.js  (+7 more)
.github/: FUNDING.yml
.husky/: pre-push
analysis/: ANALYSIS_COMPLETE.md  parallel-task-executor.js  project-analysis-orchestrator.js  run-analysis.js  simple-file-analyzer.js
archive/old-structure/claude-night-pilot/src-tauri/: Cargo.toml
archive/old-structure/claude-night-pilot/src-tauri/migrations/: 0001_init.sql
archive/old-structure/claude-night-pilot/src-tauri/src/: db.rs  executor.rs  lib.rs  lib_old.rs
claude-night-pilot/: IMPLEMENTATION_SUMMARY.md  README.md  TESTING_REPORT.md  package-lock.json  package.json
docs/: BRAND_GUIDE.md  CLI-COMPLETE-GUIDE.md  CLI-DOCUMENTATION.md  COMPREHENSIVE_TESTING_FINAL_REPORT.md  E2E_TESTING_FINAL_REPORT.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  PROJECT_RULES.md  QUALITY_CHECKLIST.md  README.md  TECHNICAL_DEBT_CLEANUP.md  TEST_EXECUTION_REPORT.md  UNIFIED_ARCHITECTURE.md  VALIDATION_RULES.md  claude-code-auto-detection-demo.md  cli-testing-report.md  faq.md  job-management-spec.md
script/: ccq.sh
scripts/: automated-cleanup.sh  cleanup-ports.js  dev-server.js  precompile-cli.js  privacy-audit.js  setup-codex-mcp.sh  simple-port-check.js  simple-server.js  stable-dev-server.js  sync-version.js  test-server.js  validate-all.js  verify-all.cjs  verify-all.js
specs/: PROJECT_ANALYSIS_SPEC.md
src/: core-modules-ui.html  gui_integration_test.js  index.html  main.js  styles.css
src-tauri/: CLEANUP_PLAN.md  Cargo.toml  SCHEDULER_DIAGNOSIS_PLAN.md  TEST_COMPILATION_FIX_REPORT.md  build.rs  claude-pilot.db-shm  claude-pilot.db-wal  clippy.toml  tauri.conf.json
src-tauri/.sqlx/: query-27778ed40c01583bc85ac297eeecf5d7c58e89161b5cf15c44c34219a6a5e653.json  query-303e06b7674751683c98a88163145f7af6c0c70567bc07032626403f4625008b.json  query-71932e0c9b1e465cf881fcb4151837b43cdca036db2a2a9b109efa2710bea7b6.json  query-c8b4aef5da1e1f983e0e9a05b9638d9e67df051d3ab408a3fdf0085c036ee639.json
src-tauri/benches/: cli_performance.rs  database_performance.rs  simple_performance.rs  startup_performance.rs
src-tauri/bindings/: ExecutionResult.ts  ExecutionSummary.ts  FileReference.ts  FileReferenceType.ts  Job.ts  JobExecutionOptions.ts  JobStatus.ts  JobType.ts  NotificationChannel.ts  NotificationConfig.ts  PerformanceGrade.ts  PerformanceMetrics.ts  Prompt.ts  PromptCategory.ts  PromptTemplate.ts  PromptVariable.ts  ResourceLimits.ts  RetryAttempt.ts  RetryConfig.ts  RetryStrategy.ts  RiskLevel.ts  SecurityAudit.ts  SecurityRisk.ts  ValidationRule.ts  VariableType.ts
src-tauri/capabilities/: default.json
src-tauri/docs/: SCHEDULER_BEST_PRACTICES_SPEC.md  SCHEDULER_COMPREHENSIVE_REFACTORING_PLAN.md  SCHEDULER_DEEP_AUDIT_AND_MIGRATION_PLAN.md  SCHEDULER_IMPLEMENTATION_ROADMAP.md  SCHEDULER_MIGRATION_GUIDE.md
src-tauri/docs/tmp/claude/: comprehensive_test_analysis_2025-08-20.md
src-tauri/docs/tmp/codex/: 2025-08-19_Codex_測試報告與最佳實踐建議.md
src-tauri/docs/tmp/cursor/: BDD_TEST_PLAN.md
src-tauri/docs/tmp/gemini/: 2025-08-20_完整專案測試與最佳實踐報告.md  analysis_report_2025-08-20.md
src-tauri/examples/: test_enhanced_executor.rs
src-tauri/migrations/: 0002_usage_tracking.sql  0003_create_unified_jobs.sql
src-tauri/scripts/: emergency-database-migration.sh
src-tauri/src/: adaptive_monitor.rs  agents_registry.rs  claude_auth_detector.rs  claude_cooldown_detector.rs  claude_session_manager.rs  database_adapter.rs  database_error.rs  database_manager.rs  database_manager_impl.rs  db.rs  enhanced_executor.rs  executor.rs  high_perf_db.rs  lib.rs  lib_tests.rs  main.rs  simple_database_manager.rs  simple_db.rs  smart_scheduler.rs  unified_interface.rs  usage_tracker.rs  worktree_manager.rs
src-tauri/src/core/: cooldown.rs  mod.rs  process.rs  retry.rs  scheduler.rs  scheduler_runner.rs
src-tauri/src/core/database/: best_practices_rusqlite.rs  connection.rs  errors.rs  manager.rs  migrations.rs  mod.rs  repository.rs  tests.rs  types.rs
src-tauri/src/core/database/tests/: integration_tests.rs  performance_tests.rs  unit_tests.rs
src-tauri/src/core/tests_new/: cooldown_tests.rs  integration_tests.rs  mod.rs  process_tests.rs  retry_tests.rs  scheduler_tests.rs
src-tauri/src/interfaces/: cli_adapter.rs  mod.rs  shared_types.rs  tauri_adapter.rs
src-tauri/src/models/: api_response.rs  claude_request.rs  claude_response.rs  execution_result.rs  job.rs  mod.rs  prompt.rs
src-tauri/src/monitoring/: health.rs  logging.rs  metrics.rs  mod.rs
src-tauri/src/routes/: health_routes.rs  job_routes.rs  mod.rs  prompt_routes.rs
src-tauri/src/scheduler/: mod.rs  real_time_executor.rs  unified_scheduler.rs
src-tauri/src/services/: claude_service.rs  database_service.rs  health_service.rs  job_engine.rs  job_executor.rs  job_scheduler.rs  job_service.rs  mod.rs  monitoring_service.rs  prompt_service.rs  scheduler_service.rs  simple_job_manager.rs  sync_service.rs  tests.rs
src-tauri/src/services/tests/: integration_tests.rs
src-tauri/src/state/: app_state.rs  event_bus.rs  mod.rs
src-tauri/tests/: compilation_verification.rs  integration_tests.rs  performance_tests.rs  scheduler_integration_tests.rs
src-tauri/tests/integration/: cli_tests.rs  database_tests.rs  mod.rs  scheduler_tests.rs
tests/: CLI_COMPREHENSIVE_TEST_REPORT.md  (+23 more)
(+137 files in other folders)
