[package]
name = "claude-night-pilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "claude-night-pilot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_night_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-night-pilot"
path = "src/main.rs"

[[bin]]
name = "cnp"
path = "src/bin/cnp.rs"

[[bin]]
name = "cnp-unified"
path = "src/bin/cnp-unified.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-cli = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"
tokio-cron-scheduler = "0.13"
sqlx = { version = "0.8", features = [
    "runtime-tokio", 
    "tls-rustls-ring-native-roots",     # Tauri推薦的TLS配置
    "sqlite",
    "chrono",
    "migrate"
] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"                          # ccusage輸出解析
dirs = "5.0"                           # 用戶目錄獲取  
sha2 = "0.10"                          # 安全規則雜湊
chrono-tz = "0.9"                      # 時區支援
futures = "0.3"                        # 異步流處理
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

# Tauri 2.0 最佳實踐：效能與大小優化配置
[profile.dev]
incremental = true # 漸進式編譯，加快開發速度

[profile.release]
codegen-units = 1 # 允許 LLVM 執行更好的優化
lto = true # 啟用連結時優化
opt-level = "s" # 優先考慮小檔案大小
panic = "abort" # 禁用 panic 處理器以提高效能
strip = true # 確保移除除錯符號

