[package]
name = "claude-night-pilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "claude-night-pilot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_night_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-night-pilot"
path = "src/main.rs"

[[bin]]
name = "cnp"
path = "src/bin/cnp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-cli = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"
tokio-cron-scheduler = "0.13"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

